@@ -9,7 +9,6 @@ To Do:
 - make a freshmeat entry
 - allow negative displacement for line plots
 - add indicator chart to the tester chart so buy/sell points have a reference
-- allow log/scale to screen options on the tester charts
 - create a package of CUS indicators, default CSV plugin import rules to the install process
   so users have a bunch of examples and things to play with
 - rename indicator function (possible main plot indicator panel revision)
@@ -17,7 +16,13 @@ To Do:
 - fix: stacked indicator widget insertion resizing is ugly.
 - allow point selection on plots to display values past the ends of the chart. (future dates and values)
 - allow individual indicators to be applied to individual charts
-
+- optimise scanner by loading absolute minimum amount of bars from each chart
+- add scaling option for CUS plots.
+- change Quote behaviour in yahoo plugin to create separate symbols for intraday and daily
+  data. also put a timer on yahoo plugin for intraday tick downloads every X minutes. same limitations
+  will apply as in the CSV timer
+  
+  
 
 Maybe some day:
 ===============
